syntax = "proto3";

package service;

message Error {
	uint32 status_code = 1;
	string message = 2;
}
